--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,10 @@
 @charset 'utf-8';
 
+//Import a Google Font
 @import url("https://fonts.googleapis.com/css?family=Numito:400,700");
+
+//Import Font
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
 
 //set colors
 $purple: #c9168d;
